<resources>
    <string name="app_name">TicTacToe</string>
    <string name="grid_description">Start</string>

    <!-- Statuses of the game -->
    <string name="status">Tap field to start the game</string>
    <string name="x_turn">Cross\' turn!</string>
    <string name="o_turn">Zero\'s turn!</string>
    <string name="draw">Draw! Tap to start new game.</string>
    <string name="x_won">Crosses won! Tap to start new game.</string>
    <string name="o_won">Zeroes won! Tap to start new game.</string>

    <!-- Descriptions for fields -->
    <string name="description_of_field_number_1">Field, coordinates 1:1</string>
    <string name="description_of_field_number_2">Field, coordinates 1:2</string>
    <string name="description_of_field_number_3">Field, coordinates 1:3</string>
    <string name="description_of_field_number_4">Field, coordinates 2:1</string>
    <string name="description_of_field_number_5">Field, coordinates 2:2</string>
    <string name="description_of_field_number_6">Field, coordinates 2:3</string>
    <string name="description_of_field_number_7">Field, coordinates 3:1</string>
    <string name="description_of_field_number_8">Field, coordinates 3:2</string>
    <string name="description_of_field_number_9">Field, coordinates 3:3</string>
    <!-- Buttons -->
    <string name="locale">RU</string>
</resources>